ec2-ssh-s3-conf.yml
Description: Template for creating EC2 instance with security group config and ssh, http access, S3 access

Parameters:
  KeyName:
    Default: EC2 ssh+http t2-micro
    Description: EC2 template with ssh+http+s3 access
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      ImageId:  ami-0b0ea68c435eb488d
      InstanceType: t2.micro
      SecurityGroup:
        - !Ref SSHSecurityGroup
        - !Ref HTTPSecurityGroup
      IamInstanceProfile: !Ref EC2InstanceProfile

  SSHSecurityGroup:
    Description: SG for ssh acces
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  HTTPSecurityGroup:
    Description: SG for http acces
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref S3Role

  S3Policy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: S3Policy
      PolicyDocument:
        Statement:
          Effect: Allow
          Action:
            - s3:*
          Resources: "*"
      Roles:
        - !Ref S3Role

  S3Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
          Action: sts:AssumeRole
      Path: "/"

Outputs:
  PublicIP:
    Description: Public ip
    Value: !Ref EC2Instance
  InstanceID:
    Description: The Instance ID
    Value: !Ref EC2Instance
